--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -29,7 +29,7 @@
   </div>
 </div>  <!-- end blogarea  -->
 <div class="newBtnArea container ">
-<button class="btn btn-primary textWhite">
+<div class="btn btn-primary textWhite btn-newblog">
   <%= link_to "新規作成" , new_blog_path %>
-</button>
+</div>
 </div>
