--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,14 +24,22 @@
     </div>
     <div id="gnavi" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
+        <% if logged_in? %>
+        <% current_user %>
         <li><%= link_to "新規作成" , new_blog_path %></li>
-        <li><a href="">menu1</a></li>
+        <li><%= link_to "ログアウト" , session_path(@current_user), method: :delete %></li>
         <li><a href="">menu2</a></li>
+        <% else %>
+        <li><%= link_to "ログイン" , new_session_path %></li>
+        <li><%= link_to "新規登録" , new_user_path %></li>
+        <% end %>
       </ul>
     </div>
   </div>
 </nav>
-
+  <% flash.each do |key, value| %>
+    <%= content_tag(:div, value, class: "#{key}") %>
+  <% end %>
     <%= yield %>
     
     <footer>
