--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -110,3 +110,15 @@ footer {
 .textWhite a{
   color: white;
 }
+
+.blog_show_table {
+  td, th {
+    border: 1px solid #222;
+    padding: 4px;
+  }
+  
+  
+  td {
+    
+  }
+}
