--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -19,7 +19,7 @@
     </div>
     <div class="blog_content">
       <%= form.label :content %>
-      <%= form.text_area :content %>
+      <%= form.text_area :content, :size : "100x50" %>
       <input type="hidden" name="test" value="test" />
     </div>
     <%= form.submit %>
