--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,4 +1,4 @@
-<h1>ブログ一覧</h1>
+<h1>ブログ詳細</h1>
 <table class="blog_show_table">
   <tr>
     <th>ID</th>
@@ -23,4 +23,4 @@
 
 <p>著者：<%= @blog.user_id %></p>
 
-<%= link_to "一覧へ戻る" , blog_path %>
+<%= link_to "一覧へ戻る" , blogs_path %>
