--- a/app/views/contact_mailer/contact_mail.html.erb
+++ b/app/views/contact_mailer/contact_mail.html.erb
@@ -1,8 +1,5 @@
-<!-- このファイルいる？　-->
-<h1>お問い合わせが完了しました！</h1>
+<h1>ブログを作成しました！</h1>
 
-<h4>name: <%= @contact.name %></h4>
+<h4>title: <%= @blog.title %></h4>
 
-<h4>お問い合わせ内容の確認</h4>
-
-<p>content: <%= @contact.content %></p>
+<p>content: <%= @blog.content %></p>
