--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -22,6 +22,9 @@
       <%= form.text_area :content, :class => "blog_textarea" ,:size => "100x10" %>
       <input type="hidden" name="test" value="test" />
     </div>
+    <div class="blog_image">
+      <%= form.file_field :image %>
+    </div>
     <%= form.submit %>
   </div>
 <% end %>
