--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -13,6 +13,11 @@
   </tr>
 </table>
 
+<div>
+  <p>ブログ画像</p>
+  <%= image_tag @blog.image %>
+</div>
+
 <% unless @blog.user == current_user %>
   <% if @favorite.present? %>
     <%= link_to 'お気に入り解除する', favorite_path(id: @favorite.id), method: :delete, class: 'btn btn-danger' %>
